# devsync

./: README.md  pyproject.toml
devsync/: README.md  devsync.py  dist.py  lsyncd_conf_handler.py
